--- a/src/webroot/css/default.css
+++ b/src/webroot/css/default.css
@@ -12,6 +12,7 @@ body {
 .container {
     padding: 0px 1rem;
     max-width: 800px;
+    
 }
 
 .content-title {
@@ -36,7 +37,7 @@ body {
     align-items: center;
 }
 
-input[type=text], input[type=number], input[type=password] {
+input[type=text],input[type=textarea],input[type=number],input[type=password] {
     font-size: 20px !important;
 }
 @media screen and (max-width: 768px) {
