--- a/src/webroot/css/top-nav.css
+++ b/src/webroot/css/top-nav.css
@@ -1,33 +1,40 @@
-/* Google Fonts - Poppins */
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap");
-
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: "Poppins", sans-serif;
-}
+/* Google Fonts */
+/* @import url('https://fonts.googleapis.com/css2?family=Orbitron&display=swap'); */ 
+/* font-family: 'Orbitron', sans-serif; */
+/* @import url('https://fonts.googleapis.com/css2?family=Tilt+Prism&display=swap');  */
+/* font-family: 'Tilt Prism', cursive; */
+@import url('https://fonts.googleapis.com/css2?family=Gluten&display=swap');
+/* font-family: 'Gluten', cursive; */
 
 .nav {
-  /* position: fixed; */
   top: 0;
   left: 0;
   width: 100%;
-  padding: 15px 200px;
+  padding: 10px 50px;
   background: #6a6766;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+  justify-content: space-between;
+  max-height: 50px;
 }
+
 .nav,
 .nav .nav-links {
   display: flex;
   align-items: center;
-}
-.nav {
-  justify-content: space-between;
+  column-gap: 30px;
+  list-style: none;
 }
 
-.nav .material-symbols-outlined {
-    color: white;
+.nav .user-links {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+}
+
+.nav .user-links a {
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
 
 .nav a {
@@ -41,70 +48,38 @@
   transition: all 0.2s linear;
 }
 
+.nav .navOpenBtn, 
+.nav .user-links {
+  width: 100px;
+}
+
+.nav .material-symbols-outlined {
+    color: white;
+    font-size: 25px;
+}
 
 .nav .logo {
   font-size: 22px;
   font-weight: 500;
   padding: 0 40px;
+  font-family: 'Gluten', cursive;
 }
-.nav .nav-links {
-  column-gap: 30px;
-  list-style: none;
-}
+
 .nav .nav-links li{
     margin-bottom: 0;
     display: block;
     width: 100%;
     text-align: center;
-}
-/* .nav .nav-links li::hover{
-    background-color: red;
-} */
-.nav .nav-links a {
-    display: block;
-    width: 100%;
-    height: 100%;
-  transition: all 0.2s linear;
+    font-size: 1.5em;
 }
 
-.nav.openSearch .nav-links a {
-  opacity: 0;
-  pointer-events: none;
-}
-.nav .search-icon {
-  color: #fff;
-  font-size: 20px;
-  cursor: pointer;
-}
-.nav .search-box {
-  position: absolute;
-  right: 250px;
-  height: 45px;
-  max-width: 555px;
+.nav .nav-links a {
+  display: block;
   width: 100%;
-  opacity: 0;
-  pointer-events: none;
-  transition: all 0.2s linear;
-}
-.nav.openSearch .search-box {
-  opacity: 1;
-  pointer-events: auto;
-}
-.search-box .search-icon {
-  position: absolute;
-  left: 15px;
-  top: 50%;
-  color: #4a98f7;
-  transform: translateY(-50%);
-}
-.search-box input {
   height: 100%;
-  width: 100%;
-  border: none;
-  outline: none;
-  border-radius: 6px;
-  background-color: #fff;
-  padding: 0 15px 0 45px;
+  transition: all 0.2s linear;
+  padding: 30px 0;
+  font-size: 16px;
 }
 
 .nav .navOpenBtn,
@@ -112,24 +87,6 @@
   display: none;
 }
 
-/* responsive */
-@media screen and (max-width: 1160px) {
-  .nav {
-    padding: 5px 100px;
-  }
-  .nav .search-box {
-    right: 150px;
-  }
-}
-@media screen and (max-width: 950px) {
-  .nav {
-    padding: 5px 50px;
-  }
-  .nav .search-box {
-    right: 100px;
-    max-width: 400px;
-  }
-}
 @media screen and (max-width: 768px) {
   .nav .navOpenBtn,
   .nav .navCloseBtn {
@@ -146,13 +103,16 @@
     max-width: 280px;
     width: 100%;
     padding-top: 100px;
-    row-gap: 30px;
     flex-direction: column;
     background-color: #11101d;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     transition: all 0.4s ease;
     z-index: 100;
   }
+  .nav .nav-links a {
+    font-size: 24px;
+  }
+
   .nav.openNav .nav-links {
     left: 0;
   }
@@ -169,12 +129,5 @@
     color: #fff;
     font-size: 35px;
     cursor: pointer;
-  }
-  .nav .search-box {
-    top: calc(100% + 10px);
-    max-width: calc(100% - 20px);
-    right: 50%;
-    transform: translateX(50%);
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
   }
 }
