--- a/src/webroot/css/event-item.css
+++ b/src/webroot/css/event-item.css
@@ -26,7 +26,7 @@
     padding:5px;
     margin-right: 5px;
     border-radius: 10px;
-    width: 70px;
+    width: auto;
     text-align: center;
     /* box-shadow: 0px 5px 15px 0px rgba(0, 0, 0, 0.35); */
     
