--- a/src/webroot/css/templates.css
+++ b/src/webroot/css/templates.css
@@ -89,7 +89,7 @@ input[type=text],input[type=textarea],input[type=number],input[type=password] {
 @import url('https://fonts.googleapis.com/css2?family=Gluten&display=swap');
 /* font-family: 'Gluten', cursive; */
 
-.nav {
+.top-nav {
   top: 0;
   left: 0;
   width: 100%;
@@ -100,55 +100,54 @@ input[type=text],input[type=textarea],input[type=number],input[type=password] {
   max-height: 50px;
 }
 
-.nav,
-.nav .nav-links {
+.top-nav,
+.top-nav .nav-links {
   display: flex;
   align-items: center;
   column-gap: 30px;
   list-style: none;
 }
 
-.nav .user-links {
+.top-nav .user-links {
   display: flex;
   align-items: center;
   justify-content: flex-end;
 }
 
-.nav .user-links a {
+.top-nav .user-links a {
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
 }
 
-.nav a {
+.top-nav a {
   color: #fff;
   text-decoration: none;
 }
 
-.nav a:hover {
-  /* background-color: white; */
+.top-nav a:hover {
   color: yellow;
   transition: all 0.2s linear;
 }
 
-.nav .navOpenBtn, 
-.nav .user-links {
+.top-nav .navOpenBtn, 
+.top-nav .user-links {
   width: 100px;
 }
 
-.nav .material-symbols-outlined {
+.top-nav .material-symbols-outlined {
     color: white;
     font-size: 25px;
 }
 
-.nav .logo {
+.top-nav .logo {
   font-size: 22px;
   font-weight: 500;
   padding: 0 40px;
   font-family: 'Gluten', cursive;
 }
 
-.nav .nav-links li{
+.top-nav .nav-links li{
     margin-bottom: 0;
     display: block;
     width: 100%;
@@ -156,7 +155,7 @@ input[type=text],input[type=textarea],input[type=number],input[type=password] {
     font-size: 1.5em;
 }
 
-.nav .nav-links a {
+.top-nav .nav-links a {
   display: block;
   width: 100%;
   height: 100%;
@@ -165,20 +164,20 @@ input[type=text],input[type=textarea],input[type=number],input[type=password] {
   font-size: 16px;
 }
 
-.nav .navOpenBtn,
-.nav .navCloseBtn {
+.top-nav .navOpenBtn,
+.top-nav .navCloseBtn {
   display: none;
 }
 
 @media screen and (max-width: 768px) {
-  .nav .navOpenBtn,
-  .nav .navCloseBtn {
+  .top-nav .navOpenBtn,
+  .top-nav .navCloseBtn {
     display: block;
   }
-  .nav {
+  .top-nav {
     padding: 5px 10px;
   }
-  .nav .nav-links {
+  .top-nav .nav-links {
     position: fixed;
     top: 0;
     left: -100%;
@@ -192,20 +191,20 @@ input[type=text],input[type=textarea],input[type=number],input[type=password] {
     transition: all 0.4s ease;
     z-index: 100;
   }
-  .nav .nav-links a {
+  .top-nav .nav-links a {
     font-size: 24px;
   }
 
-  .nav.openNav .nav-links {
+  .top-nav.openNav .nav-links {
     left: 0;
   }
-  .nav .navOpenBtn {
+  .top-nav .navOpenBtn {
     color: #fff;
     font-size: 30px;
     cursor: pointer;
     padding: 0 20px;
   }
-  .nav .navCloseBtn {
+  .top-nav .navCloseBtn {
     position: absolute;
     top: 20px;
     right: 20px;
@@ -218,31 +217,31 @@ input[type=text],input[type=textarea],input[type=number],input[type=password] {
 /* ============== */
 /* event-item.php */
 /* ============== */
-.event-outer {
+.event-item.event-outer {
     border: 2px solid;
     border-radius: 5px;
     box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
 }
 
-.event-inner {
+.event-item .event-inner {
     margin: 5px;
 }
 
-.tag {
-    padding: 5px;
+.event-item .tag {
+    padding: 5px 15px;
     border-radius: 5px;
-    font-size: .5rem;
+    font-size: .7rem;
 }
 
-.location {
+.event-item .location {
     font-size: 1.5rem;
 }
 
-.state-text {
+.event-item .state-title {
     color: #00000055;
     font-size: 1.2rem;
 }
 
-.state-0 {background-color: #d3d3d37F;}
-.state-1 {background-color: #90ee907F;}
-.state-2 {background-color: #f080807F;}
+.event-item .state-0 {background-color: #d3d3d37F;}
+.event-item .state-1 {background-color: #90ee907F;}
+.event-item .state-2 {background-color: #f080807F;}
