--- a/src/webroot/css/templates.css
+++ b/src/webroot/css/templates.css
@@ -5,9 +5,15 @@
     
 }
 
+a:visited {
+  color: black;
+  text-decoration: none;
+}
+
 input[type=text],input[type=textarea],input[type=number],input[type=password] {
     font-size: 20px !important;
 }
+
 @media screen and (max-width: 768px) {
     body {
         font-size: 14px;
