--- a/src/webroot/css/common.css
+++ b/src/webroot/css/common.css
@@ -1,4 +1,5 @@
 /* common */
+
 .disp-block {display: block;}
 .disp-flex {display: flex;}
 .disp-inline {display: inline;}
@@ -39,4 +40,8 @@
     overflow:hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
+}
+
+@media screen and (max-width: 768px) {
+    .disp-m-block { display: block; }
 }
