--- a/src/webroot/css/templates.css
+++ b/src/webroot/css/templates.css
@@ -2,7 +2,6 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    
 }
 
 a, a:visited {
@@ -10,7 +9,7 @@ a, a:visited {
   text-decoration: none;
 }
 
-input[type=text],input[type=textarea],input[type=number],input[type=password] {
+input[type=text],input[type=textarea], textarea,input[type=number],input[type=password] {
     font-size: 20px !important;
 }
 
