--- a/src/webroot/css/templates.css
+++ b/src/webroot/css/templates.css
@@ -228,6 +228,10 @@ input[type=text],input[type=textarea], textarea,input[type=number],input[type=pa
     box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
 }
 
+.event-item.delete-item {
+  background-color: darkgray;
+}
+
 .event-item .event-inner {
     margin: 5px;
 }
