--- a/src/webroot/css/common.css
+++ b/src/webroot/css/common.css
@@ -28,6 +28,8 @@
 .mb20 {margin-bottom: 20px;}
 .mb30 {margin-bottom: 30px;}
 .mb100 {margin-bottom: 100px;}
+.mt10 {margin-top: 10px;}
+.mt20 {margin-top: 20px;}
 
 .m10 {margin: 10px;}
 .m20 {margin: 20px;}
