--- a/src/webroot/css/common.css
+++ b/src/webroot/css/common.css
@@ -11,7 +11,12 @@
 .just-end {justify-content: flex-end;}
 .dir-row {flex-direction: row;}
 .dir-column {flex-direction: column;}
+.tc {text-align: center;}
 
+
+.tl {text-align: left;}
+.tr {text-align: right;}
+.br {border-right: black 1px solid;}
 .g10 {gap: 10px;}
 
 .fl {float: left;}
@@ -19,9 +24,11 @@
 
 .w100 {width: 100%;}
 .w50 {width: 50%;}
+.w25 {width: 25%;}
 
 .pt10 {padding-top: 10px;}
 .p10 {padding: 10px;}
+.pb10 {padding-bottom: 10px;}
 
 .mb5 {margin-bottom: 5px;}
 .mb10 {margin-bottom: 10px;}
