--- a/src/webroot/css/common.css
+++ b/src/webroot/css/common.css
@@ -26,6 +26,8 @@
 .w50 {width: 50%;}
 .w25 {width: 25%;}
 
+.h100 {height: 100%;}
+
 .pt10 {padding-top: 10px;}
 .p10 {padding: 10px;}
 .pb10 {padding-bottom: 10px;}
