--- a/src/webroot/css/common.css
+++ b/src/webroot/css/common.css
@@ -31,6 +31,7 @@
 .pt10 {padding-top: 10px;}
 .p10 {padding: 10px;}
 .pb10 {padding-bottom: 10px;}
+.pb20 {padding-bottom: 20px;}
 
 .mb5 {margin-bottom: 5px;}
 .mb10 {margin-bottom: 10px;}
