--- a/src/webroot/css/common.css
+++ b/src/webroot/css/common.css
@@ -1,6 +1,4 @@
 /* common */
-
-.disp-block {display: block;}
 .disp-flex {display: flex;}
 .disp-inline {display: inline;}
 .disp-iblock {display: inline-block;}
@@ -12,61 +10,29 @@
 .dir-row {flex-direction: row;}
 .dir-column {flex-direction: column;}
 .tc {text-align: center;}
-
-
 .tl {text-align: left;}
 .tr {text-align: right;}
 .br {border-right: black 1px solid;}
-.g10 {gap: 10px;}
-
 .fl {float: left;}
 .fr {float: right;}
-
 .w100 {width: 100%;}
 .w50 {width: 50%;}
-.w25 {width: 25%;}
-
-.h100 {height: 100%;}
-
-.pt10 {padding-top: 10px;}
 .p10 {padding: 10px;}
 .pb10 {padding-bottom: 10px;}
-.pb20 {padding-bottom: 20px;}
-
 .mb5 {margin-bottom: 5px;}
 .mb10 {margin-bottom: 10px;}
 .mb20 {margin-bottom: 20px;}
 .mb30 {margin-bottom: 30px;}
-.mb100 {margin-bottom: 100px;}
 .mt10 {margin-top: 10px;}
-.mt20 {margin-top: 20px;}
-
-.m10 {margin: 10px;}
-.m20 {margin: 20px;}
-
 .bold {font-weight: bold;}
-
 .fs-small {font-size: 14px;}
 .fs-medium {font-size: 16px;}
 .fs-large {font-size: 18px;}
-
-.nostyle-a {text-decoration: none;}
-.note-p {
-    font-size: 12px; 
-    color:gray;
-}
-.over-ellipsis {
-    overflow:hidden;
-    white-space: nowrap;
-    text-overflow: ellipsis;
-}
-
+.note-p {font-size: 12px; color:gray;}
+.over-ellipsis {overflow:hidden;white-space: nowrap;text-overflow: ellipsis;}
 @media screen and (max-width: 768px) {
     .disp-m-block { display: block; }
-    .dir-m-row { flex-direction: row; }
     .dir-m-column { flex-direction: column; }
-
     .fs-m-small { font-size: 12px !important; }
-    .fs-m-medium { font-size: 14px !important;; }
     .fs-m-large { font-size: 16px !important;; }
 }
