--- a/src/webroot/css/common.css
+++ b/src/webroot/css/common.css
@@ -17,6 +17,7 @@
 .fr {float: right;}
 .w100 {width: 100%;}
 .w50 {width: 50%;}
+.p5 {padding: 5px;}
 .p10 {padding: 10px;}
 .pb10 {padding-bottom: 10px;}
 .mb5 {margin-bottom: 5px;}
